Bug 1700490 - Use computed font size (rather than used size) to resolve percentages for text-decoration properties. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D109904